# rabbit-digger-pro

./: .gitignore  .gitmodules  Cargo.toml  README.md  cgr  cgr.bat  config.example.yaml  config.yaml  gen_coverage.sh  rust-toolchain  rust-toolchain.toml  tree
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codecov.yml  rust.yml  update_schema.yml
apir/: Cargo.toml  README.md
apir/src/: client.rs  lib.rs  server.rs  tests.rs  traits.rs  virtual_host.rs
apir/src/dynamic/: mod.rs
apir/src/integrations/: async_std.rs  mod.rs  tokio.rs
apir/src/traits/: addr.rs  boxed.rs  ext.rs  mod.rs  not_implement.rs  resolve.rs  runtime.rs
benchmark/: README.md  bench.sh  benchmark.yaml
benchmark/results/: iperf3-aes-128-gcm.txt  iperf3-aes-256-gcm.txt  iperf3-chacha20-ietf-poly1305.txt  iperf3-forward.txt  iperf3-rc4-md5.txt  iperf3.txt
docs/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts  telemetry.md
docs/docs/: intro.md
examples/: gateway.yaml  geoip.yaml  raw.yaml  socks5_server.yaml
examples/nft-tproxy/: reset.sh  setup.sh
examples/tproxy/: reset.sh  setup.sh  tproxy.yaml
ffi/: Cargo.toml  build.rs  rdp.h
ffi/src/: lib.rs
irp/: Cargo.toml
protocol/obfs/: Cargo.toml
protocol/obfs/src/: http_simple.rs  lib.rs  obfs_net.rs  plain.rs
protocol/raw/: Cargo.toml
protocol/raw/src/: config.rs  device.rs  forward.rs  gateway.rs  interface_info.rs  lib.rs  net.rs  server.rs  tap.rs  unix.rs  wrap.rs
protocol/raw/src/device/: boxed.rs  interface_info.rs  pcap_dev.rs  unix.rs  windows.rs
protocol/raw/src/forward/: source.rs
protocol/raw/src/unix/: tap.rs  tun.rs
protocol/remote/: Cargo.toml
protocol/remote/src/: lib.rs  net.rs  protocol.rs  server.rs
protocol/rpc/: Cargo.toml
protocol/rpc/src/: connection.rs  lib.rs  net.rs  server.rs  session.rs  tests.rs  types.rs
protocol/rpc/src/net/: socket.rs
protocol/rpc/src/session/: state.rs
protocol/ss/: Cargo.toml
protocol/ss/src/: client.rs  lib.rs  server.rs  tests.rs  udp.rs  wrapper.rs
protocol/ss/src/server/: source.rs
protocol/trojan/: Cargo.toml
protocol/trojan/src/: client.rs  lib.rs  stream.rs  tls.rs  websocket.rs
protocol/trojan/src/client/: tcp.rs  udp.rs
protocol/trojan/src/tls/: native-tls.rs  openssl.rs  rustls.rs
rabbit-digger/: .ignore  .rusty-hook.toml  Cargo.toml  README.md
rabbit-digger/rd-interface/: Cargo.toml  README.md
rabbit-digger/rd-interface/src/: config.rs  context.rs  interface.rs  macros.rs  registry.rs
rabbit-digger/rd-interface/src/config/: compact_vec_string.rs  resolvable.rs
rabbit-digger/rd-std/: Cargo.toml
rabbit-digger/rd-std/src/: builtin.rs  sniffer.rs  socks5.rs  tls.rs  transparent.rs
rabbit-digger/rd-std/src/builtin/: alias.rs  blackhole.rs  combine.rs  dns.rs  echo.rs  local.rs
rabbit-digger/rd-std/src/context/: connect_udp.rs
rabbit-digger/rd-std/src/http/: client.rs  tests.rs
rabbit-digger/rd-std/src/rule/: domain.rs  geoip.rs  ipcidr.rs  matcher.rs
rabbit-digger/rd-std/src/sniffer/: dns_sniffer.rs  service.rs
rabbit-digger/rd-std/src/socks5/: client.rs  common.rs  server.rs  tests.rs
rabbit-digger/rd-std/src/tests/: net.rs
rabbit-digger/rd-std/src/tls/: openssl.rs
rabbit-digger/rd-std/src/transparent/: redir.rs  socket.rs
rabbit-digger/rd-std/src/util/: drop_abort.rs  lru_cache.rs  net.rs  udp_connector.rs
rabbit-digger/rd-std/src/util/forward_udp/: send_back.rs
rabbit-digger/src/: config.rs  core.rs  lib.rs  main.rs  plugins.rs  rabbit_digger.rs  util.rs
rabbit-digger/src/config/: default.rs
rabbit-digger/src/protocol/: mod.rs  socks5.rs
rabbit-digger/src/protocol/socks5/: auth.rs  client.rs  common.rs  mod.rs  server.rs
rabbit-digger/src/rabbit_digger/: event.rs  running.rs
rd-derive/: Cargo.toml
rd-derive/src/: lib.rs
rd-interface/: Cargo.toml
rd-interface/src/: address.rs  config.rs  constant.rs  context.rs  error.rs  interface.rs  lib.rs  macros.rs  pool.rs  registry.rs  util.rs
rd-interface/src/config/: compact_vec_string.rs  resolvable.rs  single_or_vec.rs
rd-interface/src/registry/: net_ref.rs
rd-local/: Cargo.toml
rd-local/src/: lib.rs
rd-redir/: Cargo.toml
rd-redir/src/: lib.rs  util.rs
rd-socks5/: Cargo.toml
rd-socks5/src/: auth.rs  client.rs  common.rs  http_server.rs  lib.rs  protocol.rs  server.rs  socks5_server.rs
rd-std/: Cargo.toml
rd-std/src/: builtin.rs  context.rs  dns.rs  http.rs  lib.rs  mixed.rs  redir.rs  rule.rs  select.rs  sniffer.rs  socks5.rs  tests.rs  tls.rs  transparent.rs  util.rs
rd-std/src/builtin/: alias.rs  blackhole.rs  combine.rs  dns.rs  dns_server.rs  echo.rs  forward.rs  local.rs  noop.rs  resolve.rs
rd-std/src/context/: connect_tcp.rs  connect_udp.rs
rd-std/src/dns/: dns_net.rs  service.rs
rd-std/src/http/: client.rs  server.rs  tests.rs
rd-std/src/rule/: any.rs  config.rs  domain.rs  geoip.rs  ip_cidr.rs  ipcidr.rs  matcher.rs  rule_net.rs  udp.rs
rd-std/src/sniffer/: dns_sniffer.rs  service.rs  sni_sniffer.rs
rd-std/src/socks5/: client.rs  common.rs  protocol.rs  server.rs  tests.rs
rd-std/src/tests/: channel.rs  net.rs
rd-std/src/tls/: native-tls.rs  openssl.rs  rustls.rs
rd-std/src/transparent/: origin_addr.rs  redir.rs  socket.rs  tproxy.rs
rd-std/src/util/: async_fn.rs  async_fn_io.rs  connect_tcp.rs  connect_udp.rs  forward_udp.rs  lru_cache.rs  net.rs  peekable_tcpstream.rs  poll_future.rs  tcp_channel.rs  udp_connector.rs
rd-std/src/util/connect_tcp/: unix.rs
rd-std/src/util/forward_udp/: connection.rs  send_back.rs
remote/: Cargo.toml
src/: api_server.rs  builtin.rs  composite.rs  config.rs  controller.rs  gql.rs  lib.rs  log.rs  main.rs  plugins.rs  rabbit_digger.rs  registry.rs  rule.rs  schema.rs  select.rs  storage.rs  tracing_helper.rs  translate.rs  util.rs
ss/: Cargo.toml
ss/src/: lib.rs  server.rs  udp.rs  wrapper.rs
tests/: relay_clash.yml  relay_rdp.yml
trojan/: Cargo.toml
trojan/src/: client.rs  lib.rs  tls.rs
trojan/src/client/: tcp.rs  udp.rs
trojan/src/tls/: openssl.rs  rustls.rs
(+74 files in other folders)
