[package]
name = "rabbit-digger-pro"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"
description = "Just a stub"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.38"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = { version = "0.1.6", features = ["net", "sync", "time"] }
clap = { version = "3.1.8", default-features = false, features = [
    "std",
    "color",
    "derive",
    "env",
] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.7", features = [
    "registry",
    "env-filter",
    "json",
] }
rabbit-digger = { version = "0.1", path = "./rabbit-digger" }
notify-stream = "0.1.1"
futures = "0.3"
pin-project-lite = "0.2.6"
serde_yaml = "0.8.15"
yaml-merge-keys = { version = "0.5.1", features = ["serde_yaml"] }
serde_json = "1.0"
serde = { version = "1.0.119", features = ["derive"] }
rd-interface = { path = "./rabbit-digger/rd-interface/", version = "0.4" }
cfg-if = "1.0"
reqwest = { version = "0.11.4", features = ["native-tls-vendored"] }
parking_lot = "0.12.0"
uuid = { version = "0.8.2", features = ["v4"] }
fs2 = "0.4.3"
async-stream = "0.3.0"
once_cell = "1.7.2"

axum = { version = "0.5.1", features = ["ws"], optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
tower-http = { version = "0.2.3", features = [
    "fs",
    "cors",
    "trace",
], optional = true }
dirs = { version = "4.0.0" }
json-patch = { version = "0.2.6", optional = true }
url = { version = "2.2.2", optional = true, features = ["serde"] }
hyper = { version = "0.14.12", optional = true, features = ["http1", "client"] }
percent-encoding = { version = "2.1.0", optional = true }
bytes = { version = "1.0", optional = true }

ss = { path = "./protocol/ss", optional = true }
trojan = { path = "./protocol/trojan", optional = true }
rpc = { path = "./protocol/rpc", optional = true }
raw = { path = "./protocol/raw", optional = true }
obfs = { path = "./protocol/obfs", optional = true }

console-subscriber = { version = "0.1.3", optional = true }

tracing-opentelemetry = { version = "0.17.0", optional = true }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.16.0", features = [
    "rt-tokio",
    "reqwest_collector_client",
], optional = true }
rhai = { version = "1.5.0", optional = true, features = [
    "no_optimize",
    "no_closure",
    "no_closure",
    "serde",
] }

jemallocator = { version = "0.3", optional = true }
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
rusty-hook = "0.11.0"

[features]
default = ["ss", "trojan", "rpc", "obfs", "api_server", "rhai"]
api_server = [
    "axum",
    "serde_urlencoded",
    "tower-http",
    "json-patch",
    "url",
    "hyper",
    "percent-encoding",
    "bytes",
]
console = ["console-subscriber", "tokio/tracing"]
telemetry = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-jaeger"]
jemalloc = ["jemallocator"]

[workspace]
members = [
    "protocol/ss",
    "protocol/trojan",
    "protocol/rpc",
    "protocol/raw",
    "protocol/obfs",
    "ffi",
]
exclude = ["rabbit-digger"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "rabbit-digger-pro"
