[package]
name = "rabbit-digger-pro"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"
description = "Just a stub"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net", "sync", "time"] }
clap = { version = "4.3.21", default-features = false, features = [
    "std",
    "color",
    "derive",
    "env",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
    "json",
] }
rabbit-digger = { version = "0.1", path = "./rabbit-digger" }
notify-stream = "0.1.1"
futures = "0.3.28"
pin-project-lite = "0.2.11"
serde_yaml = "0.9.25"
yaml-merge-keys = { version = "0.6.0", features = ["serde_yaml"] }
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["derive"] }
rd-interface = { path = "./rd-interface/", version = "0.4" }
rd-std = { path = "./rd-std/", version = "0.1" }
cfg-if = "1.0.0"
reqwest = { version = "0.11.18", features = ["native-tls-vendored", "socks"] }
parking_lot = "0.12.1"
uuid = { version = "1.4.1", features = ["v4"] }
fs2 = "0.4.3"
async-stream = "0.3.5"
once_cell = "1.18.0"

axum = { version = "0.6.20", features = ["ws"], optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
tower-http = { version = "0.4.3", features = [
    "fs",
    "cors",
    "trace",
], optional = true }
dirs = { version = "5.0.1" }
json-patch = { version = "1.0.0", optional = true }
url = { version = "2.4.0", optional = true, features = ["serde"] }
hyper = { version = "0.14.27", optional = true, features = ["http1", "client"] }
percent-encoding = { version = "2.3.0", optional = true }
bytes = { version = "1.4.0", optional = true }

ss = { path = "./protocol/ss", optional = true }
trojan = { path = "./protocol/trojan", optional = true }
rpc = { path = "./protocol/rpc", optional = true }
raw = { path = "./protocol/raw", optional = true }
obfs = { path = "./protocol/obfs", optional = true }

console-subscriber = { version = "0.1.10", optional = true }

chrono = { version = "0.4.26", optional = true }
tracing-serde = { version = "0.1.3", optional = true }
tracing-opentelemetry = { version = "0.20.0", optional = true }
opentelemetry = { version = "0.20.0", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.19.0", features = [
    "rt-tokio",
    "reqwest_collector_client",
], optional = true }

rhai = { version = "1.15.1", optional = true, features = [
    "no_float",
    "no_module",
    "no_optimize",
    "no_closure",
    "serde",
    "only_i32",
] }

jemallocator = { version = "0.5.4", optional = true }
mimalloc = { version = "0.1.37", optional = true }

[dev-dependencies]
rusty-hook = "0.11.0"

[features]
default = ["ss", "trojan", "rpc", "obfs", "api_server", "rhai", "raw"]
api_server = [
    "axum",
    "serde_urlencoded",
    "tower-http",
    "json-patch",
    "url",
    "hyper",
    "percent-encoding",
    "bytes",
]
console = ["console-subscriber", "tokio/tracing"]
telemetry = [
    "tracing-opentelemetry",
    "opentelemetry",
    "opentelemetry-jaeger",
    "chrono",
    "tracing-serde",
]
jemalloc = ["jemallocator"]
libpcap = ["raw/libpcap"]

[workspace]
members = [
    "rabbit-digger",
    "rd-interface",
    "rd-std",
    "rd-derive",
    "protocol/ss",
    "protocol/trojan",
    "protocol/rpc",
    "protocol/raw",
    "protocol/obfs",
    "ffi",
]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "rabbit-digger-pro"
