[package]
name = "apir"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"
description = "Just a stub"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
async-trait = "0.1.42"
tokio = { version = "1.0", features = [ "net", "time", "rt" ], optional = true }
tokio-util = { version = "0.6.1", features = [ "compat" ], optional = true }
async-std = { version = "1.7.0", optional = true }

[features]
default = [ "use_tokio" ]
use_tokio = [ "tokio", "tokio-util" ]
use_async_std = [ "async-std" ]

[dev-dependencies]
tokio = { version = "1.0", features = [ "full" ] }
