[package]
name = "rabbit-digger"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"
description = "Just a stub"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
apir = { path = "../apir", version = "0.1" }
futures = "0.3.5"
libloading = "0.6.7"
serde = "1.0.119"
serde_derive = "1.0.119"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
itertools = "0.10.0"
