[package]
name = "rabbit-digger"
version = "0.1.1"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"
description = "Just a stub"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
rd-interface = { path = "./rd-interface", version = "0.4" }
rd-std = { path = "./rd-std", version = "0.1", optional = true }
futures = "0.3.5"
serde = { version = "1.0.119", features = ["rc"] }
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.26"
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
topological-sort = "0.1"
parking_lot = "0.12.0"
atomic-shim = "0.2.0"
dashmap = { version = "5.2.0", features = ["serde"] }
indexmap = { version = "1.7.0", features = ["serde"] }
tokio-stream = { version = "0.1.6", features = ["net", "sync", "time"] }

[dev-dependencies]
rusty-hook = "0.11.0"
tokio = { version = "1.5.0", features = ["macros"] }

[features]
default = ["rd-std"]
