[package]
name = "rabbit-digger"
version = "0.1.1"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"
description = "Just a stub"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
rd-interface = { path = "../rd-interface", version = "0.4" }
rd-std = { path = "../rd-std", version = "0.1", optional = true }
futures = "0.3.28"
serde = { version = "1.0.183", features = ["rc"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
topological-sort = "0.2.2"
parking_lot = "0.12.1"
atomic-shim = "0.2.0"
dashmap = { version = "5.5.0", features = ["serde"] }
indexmap = { version = "2.0.0", features = ["serde"] }
tokio-stream = { version = "0.1.14", features = ["net", "sync", "time"] }

[dev-dependencies]
rusty-hook = "0.11.2"
tokio = { version = "1.29.1", features = ["macros"] }

[features]
default = ["rd-std"]
