[package]
name = "rd-derive"
version = "0.1.1"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"
description = "Derive for easier create rabbit-digger config."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.13.1"

[lib]
proc-macro = true
