[package]
name = "rd-derive"
version = "0.1.1"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"
description = "Derive for easier create rabbit-digger config."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.28"
quote = "1.0.32"
proc-macro2 = "1.0.66"
darling = "0.20.3"

[lib]
proc-macro = true
