[package]
name = "rd-local"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
rd-interface = { path = "../rd-interface" }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6.1", features = [ "compat" ] }

[lib]
crate-type = ["dylib"]
