[package]
name = "rd-std"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"
description = "std for rabbit-digger"
license = "MIT OR Apache-2.0"

[dependencies]
# common
rd-interface = { version = "0.4", path = "../rd-interface" }
rd-derive = { version = "0.1", path = "../rd-derive" }
futures = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
serde = "1.0"
tracing = "0.1.26"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.5.0", features = ["net", "rt", "macros"] }
parking_lot = "0.12.0"
tokio-util = { version = "0.6", features = ["codec", "net"] }
dashmap = { version = "5.0.0" }
pin-project-lite = "0.2.8"

# socks5
socks5-protocol = "0.3.2"

# http
http = { version = "0.2.4", optional = true }
hyper = { version = "0.14.12", features = ["http1", "client", "server"] }

# transparent
libc = "0.2.91"
socket2 = { version = "0.4.0", features = ["all"] }
cfg-if = "1.0"

# rule
smoltcp = "0.8.0"
lru_time_cache = "0.11"
serde_with = "1.8.1"
maxminddb = "0.21.0"
flate2 = "1.0.20"
tar = "0.4.35"
once_cell = "1.7.2"

# dns
dns-parser = "0.8"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"] }

[features]
default = ["http_server"]
plugin = []
http_server = []
