[package]
name = "rd-std"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"
description = "std for rabbit-digger"
license = "MIT OR Apache-2.0"

[dependencies]
# common
rd-interface = { version = "0.4", path = "../rd-interface" }
rd-derive = { version = "0.1", path = "../rd-derive" }
futures = "0.3"
serde = "1.0"
tracing = "0.1.26"
anyhow = "1.0"
tokio = { version = "1.5.0", features = ["net", "rt", "macros"] }
parking_lot = "0.12.0"
tokio-util = { version = "0.7.1", features = ["codec", "net"] }
pin-project-lite = "0.2.8"
itertools = "0.10.3"

# socks5
socks5-protocol = "0.3.2"

# http
http = { version = "0.2.4", optional = true }
hyper = { version = "0.14.12", features = ["http1", "client", "server"] }

# transparent
libc = "0.2.91"
socket2 = { version = "0.4.0", features = ["all"] }
cfg-if = "1.0"

# rule
smoltcp = { version = "0.8.0", default-features = false, features = [
    "std",
    "proto-ipv4",
    "proto-ipv6",
] }
lru_time_cache = "0.11"
serde_with = "1.8.1"
maxminddb = "0.23.0"
flate2 = "1.0.20"
tar = "0.4.35"
once_cell = "1.7.2"

# dns
trust-dns-proto = "0.22.0"
trust-dns-resolver = { version = "0.22.0", optional = true }
trust-dns-server = { version = "0.22.0", optional = true, features = [
    "trust-dns-resolver",
] }

# tls
tokio-rustls = { version = "0.23.2", features = [
    "dangerous_configuration",
], optional = true }
webpki-roots = { version = "0.22.2", optional = true }

openssl-crate = { package = "openssl", version = "0.10", features = [
    "vendored",
], optional = true }
tokio-openssl = { version = "0.6.1", optional = true }

tokio-native-tls = { version = "0.3.0", optional = true }
native-tls-crate = { package = "native-tls", version = "0.2", features = [
    "vendored",
], optional = true }

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"] }

[features]
default = ["http_server", "dns", "native-tls"]
plugin = []
http_server = []
dns = ["trust-dns-resolver", "trust-dns-server"]

rustls = ["tokio-rustls", "webpki-roots"]
openssl = ["openssl-crate", "tokio-openssl"]
native-tls = ["tokio-native-tls", "native-tls-crate"]
