[package]
name = "rd-std"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"
description = "std for rabbit-digger"
license = "MIT OR Apache-2.0"

[dependencies]
# common
rd-interface = { version = "0.4", path = "../rd-interface" }
rd-derive = { version = "0.1", path = "../rd-derive" }
futures = "0.3.28"
serde = "1.0.183"
tracing = "0.1.37"
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["net", "rt", "macros"] }
parking_lot = "0.12.1"
tokio-util = { version = "0.7.8", features = ["codec", "net"] }
pin-project-lite = "0.2.11"
itertools = "0.11.0"

# socks5
socks5-protocol = "0.3.5"

# http
http = { version = "0.2.9", optional = true }
hyper = { version = "0.14.27", features = ["http1", "client", "server"] }

# transparent
libc = "0.2.147"
socket2 = { version = "0.5.3", features = ["all"] }
cfg-if = "1.0.0"

# rule
smoltcp = { version = "0.10.0", default-features = false, features = [
    "std",
    "proto-ipv4",
    "proto-ipv6",
] }
lru_time_cache = "0.11.11"
serde_with = "3.2.0"
maxminddb = "0.23.0"
flate2 = "1.0.26"
tar = "0.4.40"
once_cell = "1.18.0"

# dns
trust-dns-proto = "0.21.1"
trust-dns-resolver = { version = "0.21.1", optional = true }

# tls
tokio-rustls = { version = "0.24.1", features = [
    "dangerous_configuration",
], optional = true }
webpki-roots = { version = "0.25.1", optional = true }

openssl-crate = { package = "openssl", version = "0.10.56", features = [
    "vendored",
], optional = true }
tokio-openssl = { version = "0.6.3", optional = true }

tokio-native-tls = { version = "0.3.1", optional = true }
native-tls-crate = { package = "native-tls", version = "0.2.11", features = [
    "vendored",
], optional = true }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }

[features]
default = ["http_server", "trust-dns-resolver", "native-tls"]
plugin = []
http_server = []

rustls = ["tokio-rustls", "webpki-roots"]
openssl = ["openssl-crate", "tokio-openssl"]
native-tls = ["tokio-native-tls", "native-tls-crate"]
