[package]
name = "ss"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
rd-interface = { version = "0.1" }
shadowsocks = { version = "1.9.2", features = [ "stream-cipher" ] }
serde_derive = "1.0"
serde = "1.0"
tokio-util = { version = "0.6.3", features = [ "compat" ] }

[lib]
crate-type = ["cdylib"]
