[package]
name = "obfs"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
rd-interface = { path = "../../rabbit-digger/rd-interface/", version = "0.4" }
# rd-interface = "0.3"
serde = "1.0"
tracing = "0.1.26"
tokio = "1.0"
bytes = "1.0"
pin-project-lite = "0.2.6"
futures = "0.3"
rand = "0.8.3"
