[package]
name = "obfs"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"

[dependencies]
rd-interface = { path = "../../rd-interface/", version = "0.4" }
rd-std = { path = "../../rd-std/", version = "0.1" }
serde = "1.0"
tokio = "1.0"
pin-project-lite = "0.2.6"
futures = "0.3"
rand = "0.8.3"
base64 = "0.13.0"
