[package]
name = "raw"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
rd-interface = { path = "../../rabbit-digger/rd-interface/", version = "0.4" }
rd-std = { path = "../../rabbit-digger/rd-std/", version = "0.1" }
# rd-interface = "0.3"
serde = "1.0"
tracing = "0.1.26"
tokio-smoltcp = "0.2.2"
tokio = { version = "1.5.0", features = ["rt", "macros", "net"] }
pcap = "0.9.1"
futures = "0.3"
lru_time_cache = "0.11"
parking_lot = "0.12.0"

tokio-util = { version = "0.6", features = ["codec"] }

[target.'cfg(unix)'.dependencies.tun-crate]
version = "0.5.3"
package = "tun"
features = ["async"]

[target.'cfg(windows)'.dependencies]
libc = "0.2"
wintun = "0.2"
once_cell = "1.7.2"

[target.'cfg(unix)'.dependencies]
nix = "0.23.1"
