[package]
name = "remote"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
rd-interface = { path = "../../rabbit-digger/rd-interface/", version = "0.4" }
# rd-interface = "0.3"
serde = "1.0"
tracing = "0.1.26"
tokio = { version = "1.5.0", features = ["rt"] }
bincode = "1.3.3"
dashmap = "4.0.2"
