[package]
name = "rpc"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
rd-interface = { path = "../../rabbit-digger/rd-interface/", version = "0.4" }
rd-std = { path = "../../rabbit-digger/rd-std/", version = "0.1" }
# rd-interface = "0.3"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.26"
tokio = { version = "1.5.0", features = ["rt"] }
bincode = "1.3.3"
dashmap = "5.1.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"
parking_lot = "0.12.0"
serde_json = "1.0.78"
