[package]
name = "ss"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
rd-interface = { path = "../../rabbit-digger/rd-interface/", version = "0.4" }
# rd-interface = "0.3"
shadowsocks = { version = "1.10.3", features = [ "stream-cipher", "aead-cipher-extra" ] }
serde = "1.0"
bytes = "1.0"
tracing = "0.1.26"
byte_string = "1.0"
serde_json = "1.0"
tokio = { version = "1.5.0", features = ["rt"] }
socks5-protocol = "0.3"
