[package]
name = "trojan"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"

[dependencies]
rd-interface = { path = "../../rabbit-digger/rd-interface/", version = "0.4" }
serde = "1.0"
tracing = "0.1.26"
sha2 = "0.10.1"
hex = "0.4.3"
socks5-protocol = "0.3.4"
futures = "0.3"
tokio = "1.0"
tokio-tungstenite = "0.17.1"
tokio-util = { version = "0.7.1", features = ["codec", "net"] }
bytes = "1.1.0"
once_cell = "1.7.2"

tokio-rustls = { version = "0.23.2", features = [
    "dangerous_configuration",
], optional = true }
webpki-roots = { version = "0.22.2", optional = true }

openssl-crate = { package = "openssl", version = "0.10", features = [
    "vendored",
], optional = true }
tokio-openssl = { version = "0.6.1", optional = true }

tokio-native-tls = { version = "0.3.0", optional = true }
native-tls-crate = { package = "native-tls", version = "0.2", features = [
    "vendored",
], optional = true }

[features]
default = ["native-tls"]
rustls = ["tokio-rustls", "webpki-roots"]
openssl = ["openssl-crate", "tokio-openssl"]
native-tls = ["tokio-native-tls", "native-tls-crate"]
