[package]
name = "trojan"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"

[dependencies]
rd-interface = { path = "../../rabbit-digger/rd-interface/", version = "0.4" }
rd-std = { path = "../../rabbit-digger/rd-std/", version = "0.1" }
serde = "1.0"
sha2 = "0.10.1"
hex = "0.4.3"
socks5-protocol = "0.3.4"
futures = "0.3"
tokio = "1.0"
tokio-tungstenite = "0.17.1"
tokio-util = { version = "0.7.1", features = ["codec", "net"] }
bytes = "1.1.0"
